--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>欢迎来到我的网页</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <h1>范瑞刚是傻子</h1>
 </body>
 </html>
